# Copyright 2025 The gRPC Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bazel_dep(name = "pugixml", version = "1.15")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "pantor_inja",
    build_file = "inja.BUILD",
    integrity = "sha256-cVX5RFU8pgZLJuiObK6Lcfi+dkgyycfG1ZmODV/WDFU=",
    strip_prefix = "inja-3.4.0",
    urls = [
        "https://github.com/pantor/inja/archive/refs/tags/v3.4.0.tar.gz",
    ],
)
